--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .train-form {
-  background-color: #81BEF7
+  background-color: #81BEF7;
 }
 
-ul {
-  color= #81BEF7
-}
+/*ul {
+  color: #81BEF7;
+} */
